@startuml
skinparam classAttributeIconSize 0

class AplicacaoPOT{
  +static getInstance()
  +getSessaoAtual()
}

class SessaoUtilizador{
  +getEmailUtilizador()
}

class EnderecoDB {
  +getEnderecoParque()
  +getEnderecoByNifCliente(nif)
}

class ScooterDB {
  +getScooterById(idScooter)
}

class EncomendaDB {
  +getListaEncomendaById(idEntrega)
}

class Entrega {
  -Integer idEntrega
  -String dataInicio
  -String dataFim
  +addPesoEncomenda(pesoEncomenda, pesoTotal)
}

class EntregaDB {
  +getListaEntregaByNifEstafeta(nifEstafeta)
  +getEntregaById(int idEntrega)
  +generateGraph(listEnderecos, est, scooter, pesoTotal)
}

class EstafetaDB {
  +getEstafetaByEmail(email)
}

class IniciarEntregaController {
  +getEstafeta()
  +calculatePath(idEntrega)
}

class IniciarEntregaUI {
}

class Encomenda {
  -Integer idEncomenda
  -String dataPedida
  -Double preco
  -Double pesoEncomenda
  -Double taxa
}

class Estafeta {
  -Integer NIF
  -String nome
  -String email
  -Integer numeroSegurancaSocial
  -String password
  -Double pesoEstafeta
}

class Scooter {
  -Integer idScooter
  -Double percentagemBateria
  -Double pesoMaximo
  -Double pesoScooter
  -Double potencia
  -Double areaFrontal
}

class Endereco {
  -String morada
  -Double latitude
  -Double longitude
  -Double altitude
  +addListaEndereco(enderecoCliente, listaEnderecos)
}

class Parque {
  -Integer numeroMaximo
}

class Cliente {
  -Integer NIF
  -String nome
  -String email
  -Integer numeroSegurancaSocial
  -String password
  -Integer creditos
}


class Cartao {
  -numeroCartao
  -dataDeValidade
  -CCV
}

class EstadoEncomenda {
  -id_estado_encomenda
  -designacao
}

class Produto {
  -idProduto
  -designacao
  -peso
  -precoBase
}

IniciarEntregaUI ..> IniciarEntregaController

IniciarEntregaController ..> EstafetaDB
IniciarEntregaController ..> EnderecoDB
IniciarEntregaController ..> ScooterDB
IniciarEntregaController ..> EntregaDB
IniciarEntregaController ..> EncomendaDB
IniciarEntregaController ..> AplicacaoPOT
IniciarEntregaController ..> SessaoUtilizador

EntregaDB "1" --> "*" Entrega : tem registadas
EstafetaDB "1" --> "*" Estafeta : tem registadas
EncomendaDB "1" --> "*" Encomenda : tem registadas
EnderecoDB "1" --> "*" Endereco : tem registadas
ScooterDB "1" --> "*" Scooter : tem registadas

Cliente "1" -- "1" Cartao : tem >
Parque "1" --> "*" Scooter: possui >
Parque "1" --> "1" Endereco: tem >
Entrega "1" --> "*" Encomenda : possui >
Estafeta "1" --> "*" Entrega: realiza >
Entrega "*" --> "1" Scooter: realiza <
Cliente "1" --> "1" Endereco: tem >
Cliente "1" --> "*" Encomenda: realiza e paga >
Encomenda "1" -- "1" EstadoEncomenda : tem >
Encomenda "1" -- "*" Produto: tem >

@enduml